kubeyaml/ingress-nginx-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
  name: nginx
  namespace: haugom
spec:
  rules:
  - host: nginx.lab.cloud.haugom.org
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx.lab.cloud.haugom.org
    secretName: nginx-cert
